<resources>
    <string name="app_name">LDMobile</string>
    <string name="action_filter">Фильтр</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="rest_server_base_url">http://elasticsearch.prj.elewise.com:8080/LdMobileService/</string>
    <string name="docs_activity_title">Электронные документы</string>
    <string name="docs_activity_no_results">Нет результатов</string>
    <string name="docs_activity_tab_inbox">Входящие</string>
    <string name="docs_activity_tab_outbox">Исходящие</string>
    <string name="docs_activity_date_group">От %s</string>
    <string name="doc_activity_tab_document">Документ</string>
    <string name="doc_activity_tab_lines">Строки</string>
    <string name="doc_activity_tab_history">История</string>
    <string name="fragment_doc_header_succes">Согласовать</string>
    <string name="fragment_doc_header_reject">Отклонить</string>
    <string name="fragment_doc_packet_header_related">Связанные документы</string>
    <string name="fragment_doc_packet_header_subscribe">Подписать</string>
    <string name="fragment_doc_packet_header_refuse">Отказать</string>
    <string name="menu_docs_approve_success">Согласовать</string>
    <string name="menu_docs_approve_reject">Отказать</string>
    <string name="menu_docs_sign_success">Подписать</string>
    <string name="menu_docs_sign_reject">Отказать</string>
    <string name="drawer_menu_login">Логин:</string>
    <string name="drawer_menu_role">Роль:</string>
    <string name="drawir_munu_documents">Документы</string>
    <string name="drawer_menu_settings">Настройки</string>
    <string name="drawer_menu_about">О программе</string>
    <string name="filter_activity_title">Фильтр</string>
    <string name="filter_activity_btn_apply">Применить</string>
    <string name="filter_activity_btn_clear">Сбросить</string>
    <string name="dialog_succes_doc_title">Согласование</string>
    <string name="dialog_succes_doc_message">Вы уверены, что хотите согласовать документ?</string>
    <string name="dialog_succes_doc_ok">Согласовать</string>
    <string name="dialog_succes_doc_cancel">Отмена</string>
    <string name="dialog_reject_doc_title">Отклонить</string>
    <string name="dialog_reject_doc_reason">Введите причину отказа</string>
    <string name="dialog_reject_doc_ok">Отклонить</string>
    <string name="dialog_reject_doc_cancel">Отмена</string>
    <string name="dialog_succes_doc_packet_title">Подписать пакет</string>
    <string name="dialog_succes_doc_packet_message">Доступные для подписания: %s</string>
    <string name="dialog_succes_doc_packet_ok">Подписать</string>
    <string name="dialog_succes_doc_packet_cancel">Отмена</string>
    <string name="dialog_reject_doc_packet_title">Отказать пакет</string>
    <string name="dialog_reject_doc_packet_message">Доступные для отказа: %s</string>
    <string name="dialog_reject_doc_packet_comment">Комментарий</string>
    <string name="dialog_refect_doc_packet_need_specify_comment">Необходимо ввести комментарий</string>
    <string name="dialog_reject_doc_packet_ok">Отказать</string>
    <string name="dialog_reject_doc_packet_cancel">Отмена</string>
    <string name="alert_dialog_ok">Ок</string>
    <string name="alert_dialog_error">Ошибка</string>
    <string name="alert_dialog_error_login">Не удалось войти в систему</string>
    <string name="alert_dialog_error_subscribe_packet">Невозможно выполнить действие по пакету. В пакете документов отсутствуют документы готовые к отправке</string>
    <string name="error_unknown">Произошла непредвиденная ошибка</string>
    <string name="error_unknown_status_type">Неизвестный статус выполнения запроса</string>
    <string name="error_load_data">Ошибка загрузки данных</string>
    <string name="error_authentication">Ошибка аутентификации</string>
    <string name="activity_login_hint_login">Логин</string>
    <string name="activity_login_hint_password">Пароль</string>
    <string name="activity_login_btn_login">Войти</string>
    <string name="activity_login_enter_login">Введите логин</string>
    <string name="activity_login_enter_password">Введите пароль</string>
    <string name="activity_settings_title">Настройки</string>
    <string name="activity_settings_hint">Укажите адрес подключения</string>
    <string name="activity_settings_btn_save">Сохранить</string>
    <string name="activity_settings_error_empty">Необходимо указать адрес подключения</string>
    <string name="activity_settings_cripto_pro_title">Настройки КриптоПро</string>
    <string name="activity_settings_cripto_pro_add_container_ok">Контейнер успешно добавлен</string>
    <string name="activity_settings_cripto_pro_add_container_failed">Ошибка добавления контейнера</string>
    <string name="activity_settings_cripto_pro_add_cert_ok">Сертификат успешно добавлен</string>
    <string name="activity_settings_cripto_pro_add_cert_failed">Ошибка добавления сертификата</string>
    <string name="activity_settings_dialog_remove_cert_title">Удалить сертификат?</string>
    <string name="activity_settings_dialog_remove_key_store_title">Удалить контейнер?</string>
    <string name="activity_settings_dialog_cancel">Отмена</string>
    <string name="activity_settings_dialog_remove">Удалить</string>
    <string name="activity_filter_validate_error">Необходимо указать: «%s»</string>
    <string name="progress_dialog_load">Пожалуйста подождите..</string>
    <string name="activity_about_title">О программе</string>
    <string name="action_success">Успешно выполнено</string>
    <string name="action_error">Действие не выполнено</string>
    <string name="dialog_add_to_chain_title">Добавить в цепочку?</string>
    <string name="dialog_add_buttion">Добавить</string>
    <string name="dialog_delete_from_chain_title">Удалить из цепочки?</string>
    <string name="dialog_delete_button">Удалить</string>
    <string name="dialog_cancel_button">Отмена</string>
    <string name="dialog_not_granted_perm">Внимание! Без доступа к памяти, вы не сможете настроить CriptoPro. Запросить разрешения повторно?</string>
    <string name="toast_open_settings_hint">Необходимо, в разделе разрешения, выдать доступ к памяти</string>
    <string name="action_settings">Настройки</string>
    <string name="snackbar_open_settings_hint">Нет доступа к памяти</string>
    <string name="dialog_btn_cancel">Отмена</string>
    <string name="dilog_btn_request">Запросить</string>
    <string name="cripto_pro_invalid_license">Лицензионный ключ CriptoPro недействителен</string>
    <string name="ContainerMoveLabel">Копировать контейнер из:</string>
    <string name="CertTrustMoveLabel">Копировать корневой из:</string>
    <string name="ContainerDefaultPath">/mnt/sdcard/keys</string>
    <string name="ShowLog">Log</string>
    <string name="StatusField">Status</string>
    <string name="StatusUnknown">unknown</string>
    <string name="StatusOK">done</string>
    <string name="StatusError">failed</string>
    <string name="SettingsCopy">Добавить контейнер</string>
    <string name="SettingsCopyTrust">Добавить корневой</string>
    <string name="SettingsTitleTrustCert">Корневые</string>
    <string name="SettingsTitleChain">Цепочка</string>
    <string name="SettingsLicenseNumber">Лицензионный ключ:</string>
    <string name="SettingsKeyStoreType">Тип контейнера:</string>
    <string name="SettingsProviderType">Тип провайдера:</string>
    <string name="SettingsKeyAlgorithm">KeyAlgorithm:</string>
    <string name="settings_btn_change_license">Ввести новую лицензию</string>
    <string name="settings_license_type_permanent">Статус: постоянная лицензия</string>
    <string name="settings_license_type_expired_days">Статус: осталось дней: %s</string>
    <string name="settings_license_type_expired">Статус: истекла</string>
    <string name="settings_license_type_invalid">Статус: недействительна</string>
    <string name="frm_input_license_tile">Ввести новый номер:</string>
    <string name="frm_input_license_btn_cancel">Отмена</string>
    <string name="frm_input_license_btn_ok">Ок</string>
    <string name="frm_input_license_result_ok">Лицензия успешно установлена</string>
    <string name="frm_input_license_result_fail">Ошибка установки лицензии</string>
    <string name="ContainerTab">Containers</string>
    <string name="ExamplesTab">Examples</string>
    <string name="SettingsTab">Settings</string>
    <string name="IntentsTab">Intents</string>
    <string name="UtilitiesTab">Utilities</string>
    <string name="ContainerGenKeyPair">Create container (signature key)</string>
    <string name="ContainerGenKeyPairDH">Create container (exchange key)</string>
    <string name="ContainerChangePassAndCopy">Create container and change pin</string>
    <string name="ContainerRemoveOneContainer">Delete container</string>
    <string name="ContainerRemoveContainers">Delete all containers</string>
    <string name="ContainerContainerName">Container:</string>
    <string name="ContainerSelfSignedButton">Self-signed (limited use)</string>
    <string name="ContainerCA14Button">MS CA</string>
    <string name="ContainerCA15Button">CA 1.5</string>
    <string name="ContainerCA20Button">CA 2.0 (default password: 123)</string>
    <string name="ContainerContainerNameIsNull">Error! Container alias not set.</string>
    <string name="ContainerContainerNameExists">Error! Container exists.</string>
    <string name="ContainerNewPasswordSet" formatted="false">Password have changed: %s</string>
    <string name="ContainerRequireRemoveContainer">Do you want to remove container(s)?</string>
    <string name="ExamplesExampleName">Example:</string>
    <string name="ExamplesClientName">Выбранный для подписи контейнер:</string>
    <string name="ExamplesClientPassword">Client password:</string>
    <string name="ExamplesServerName">Recipient container:</string>
    <string name="ExamplesServerPassword">Recipient password:</string>
    <string name="ExamplesExecute">Execute</string>
    <string name="ProgressDialogExecuting">Please wait&#8230;</string>
    <string name="ExamplesInstallCAdESCAWarning">
        You have chosen CAdES example which requires CA certificates to being installed.
        A special example %s will install the certificates. You can also install the
        certificates using Settings > Security on your device. Press Execute to fulfil
        the example.
    </string>
    <string name="ExamplesAuthInstallCACAdES">Automatically install CA certificates</string>
    <string name="ContainerAboutTestContainer" formatted="false">Container: %s, password: %s</string>
    <string-array name="providerTypes">
        <item>GOST R 34.10&#8211;2001</item>
        <item>GOST R 34.10&#8211;2012 (256)</item>
        <item>GOST R 34.10&#8211;2012 (512)</item>
    </string-array>
</resources>