<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fadeScrollbars="false"
    android:fillViewport="false">

    <LinearLayout
        android:id="@+id/llSettingsMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/SettingsLicenseNumber" />

        <TextView
            android:id="@+id/tvLicenseNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_gravity="top|center_horizontal"
            android:textStyle="bold"
            android:focusableInTouchMode="true" />

        <TextView
            android:id="@+id/tvLicenseStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:focusableInTouchMode="true"
            android:layout_marginBottom="8dp"
            tools:text="Статус лицензии: действителен" />

        <Button
            android:id="@+id/btnChangeLicense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppTheme.Button.Accent"
            android:layout_marginBottom="8dp"
            android:text="@string/settings_btn_change_license" />

        <TextView
            android:id="@+id/tvSettingKeyStore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:visibility="gone"
            android:text="@string/SettingsKeyStoreType" />

        <Spinner
            android:id="@+id/spKeyStore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:focusable="true"
            android:visibility="gone"
            android:focusableInTouchMode="true" />

        <TextView
            android:id="@+id/tvExamplesClientName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:text="@string/ExamplesClientName" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Spinner
                android:id="@+id/spExamplesClientList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="top|center_horizontal" />

            <ImageButton
                android:id="@+id/btnRemoveContainer"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                style="@style/AppTheme.Button.Accent"
                android:src="@drawable/ic_trash_can"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tvSettingProviderStore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:layout_marginTop="5dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/SettingsProviderType" />

        <Spinner
            android:id="@+id/spProviderType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp" />

        <Button
            android:id="@+id/btnMoveContainers"
            style="@style/AppTheme.Button.Accent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:text="@string/SettingsCopy" />

        <Button
            android:id="@+id/btnMoveCertTrust"
            style="@style/AppTheme.Button.Accent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:text="@string/SettingsCopyTrust" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/SettingsTitleTrustCert"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <LinearLayout
            android:id="@+id/lvTrustCert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"/>
    </LinearLayout>
</ScrollView>