<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:text="@string/dialog_reject_doc_title"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/dialog_reject_doc_reason" />

            <EditText
                android:id="@+id/edReason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:lines="3">
            </EditText>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:gravity="right"
                android:orientation="horizontal">


                <android.support.design.button.MaterialButton
                    android:id="@+id/btnReject"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/AppTheme.Button.Accent"
                    android:layout_weight="1"
                    android:layout_marginEnd="4dp"
                    android:text="@string/dialog_reject_doc_ok" />

                <android.support.design.button.MaterialButton
                    android:id="@+id/btnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    style="@style/AppTheme.Button.Default"
                    android:layout_weight="1"
                    android:text="@string/dialog_reject_doc_cancel" />

            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

</ScrollView>